<resources>
    <string name="app_name">MIAOXINYUN</string>
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="confirm">确定</string>
    <string name="index_page">首页</string>
    <string name="me">我的</string>
    <string name="change_password">修改密码</string>
    <string name="exit">退出</string>
    <string name="bought_record">采购记录</string>
    <string name="view_more">查看更多</string>
    <string name="deliver">发货</string>
    <string name="scan">扫描</string>
    <string name="current_login_password">当前登录密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_new_password">确认新密码</string>
    <string name="take_picture">拍照</string>
    <string name="bought">采购</string>
    <string name="view_receipt">查看发票</string>
    <string name="receive_record">收款记录</string>
    <string name="receive">收款</string>
    <string name="deliver_record">发货记录</string>
    <string name="empty_username_or_password">用户名或密码为空</string>
    <string name="logining">登录中...</string>
    <string name="password_not_matched">前后密码不一致</string>
    <string name="i_want_deliver">我要发货</string>
    <string name="select_all">全选</string>
    <string name="submit">提交</string>
    <string name="total_amount_x">总金额:%.2f</string>
    <string name="please_select_at_least_one_goods">请至少选择一件商品</string>
    <string name="received_already">已收款</string>
    <string name="foreign_exchanging">外汇兑换中</string>
    <string name="center_transferring">消费中心转账中</string>
    <string name="bank_transferring">法国银行转账中</string>
    <string name="card_delivering">卡额分配中</string>
    <string name="in_account">"到账 "</string>
    <string name="availableAmount">可用余额（元）</string>
    <string name="total_available_amount_x">总余额:%.2f</string>
    <string name="fill_receipt">出关单填写信息</string>
    <string name="receipt_not_uploaded">未上传发票</string>
    <string name="verifying_receipt">待审核</string>
    <string name="receipt_passed">发票审核通过</string>
    <string name="receipt_unpassed">发票审核未通过</string>
    <string name="submit_successfully">提交成功</string>
    <string name="submit_unsuccessfully">提交失败</string>
    <string name="verification_passed">审核通过</string>
    <string name="verification_unpassed">暂无报关单</string>
    <string name="view_form">查看出关单</string>
    <string name="form_info">出关单信息</string>
    <string name="upload_successfully">上传成功</string>
    <string name="uploading">上传中</string>
    <string name="receiving_amount">收款金额</string>
    <string name="set_amount">设置金额</string>
    <string name="standard_amount">%.2f</string>
</resources>