<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.wang.franch.helper.StringHelper" />

        <variable
            name="account"
            type="com.wang.franch.bean.Account" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="15dp"
            android:text="@string/index_page"
            android:textColor="@color/color_333"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/viewBack"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/viewBack"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="16dp"
            android:elevation="0dp"
            app:cardBackgroundColor="@color/color_14beac"
            app:cardCornerRadius="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textIndex" />

        <TextView
            android:id="@+id/textAvailableAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:elevation="4dp"
            android:text="@string/availableAmount"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/viewBack"
            app:layout_constraintTop_toTopOf="@id/viewBack" />

        <TextView
            android:id="@+id/btnReceive"
            android:layout_width="86dp"
            android:layout_height="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_cicle_white_solid"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/receive"
            android:textColor="@color/color_029989"
            app:layout_constraintBottom_toBottomOf="@id/textAvailableAmount"
            app:layout_constraintEnd_toEndOf="@id/viewBack"
            app:layout_constraintTop_toTopOf="@id/textAvailableAmount" />

        <com.wang.franch.widget.MarqueeTextView
            android:id="@+id/tvAvailableAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:elevation="4dp"
            android:text="@{StringHelper.INSTANCE.standardAmount(context,account.validBalance)}"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btnReceive"
            app:layout_constraintStart_toStartOf="@id/textAvailableAmount"
            app:layout_constraintTop_toBottomOf="@id/btnReceive"
            tools:text="€6666688.00" />

        <com.wang.franch.widget.MarqueeTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:elevation="4dp"
            android:text="@{StringHelper.INSTANCE.totalAvailableAmount(context,account.balance)}"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvReceiveRecord"
            app:layout_constraintEnd_toStartOf="@id/tvReceiveRecord"
            app:layout_constraintStart_toStartOf="@id/textAvailableAmount"
            app:layout_constraintTop_toTopOf="@id/tvReceiveRecord"
            tools:text="总余额:€888888.00" />

        <TextView
            android:id="@+id/tvReceiveRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:elevation="4dp"
            android:text="@string/receive_record"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBack"
            app:layout_constraintEnd_toEndOf="@id/btnReceive" />

        <TextView
            android:id="@+id/textRecord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/bought_record"
            android:textColor="@color/color_262626"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/viewBack"
            app:layout_constraintTop_toBottomOf="@id/viewBack" />

        <TextView
            android:id="@+id/tvMore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_more"
            android:textColor="@color/color_999"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/textRecord"
            app:layout_constraintEnd_toEndOf="@id/viewBack"
            app:layout_constraintTop_toTopOf="@id/textRecord" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvBoughtRecords"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@id/btnDeliver"
            app:layout_constraintEnd_toEndOf="@id/viewBack"
            app:layout_constraintStart_toStartOf="@id/viewBack"
            app:layout_constraintTop_toBottomOf="@id/textRecord" />

        <Button
            android:id="@+id/btnDeliver"
            style="@style/NormalButtonStyle"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_6_corner_009788_stroke"
            android:text="@string/deliver"
            android:textColor="@color/color_009788"
            app:layout_constraintBottom_toTopOf="@id/btnScan"
            app:layout_constraintEnd_toEndOf="@id/viewBack"
            app:layout_constraintStart_toStartOf="@id/viewBack" />

        <Button
            android:id="@+id/btnScan"
            style="@style/NormalButtonStyle"
            android:layout_width="0dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/shape_6_corner_009788_solid"
            android:text="@string/scan"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/btnDeliver"
            app:layout_constraintStart_toStartOf="@id/btnDeliver" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>