<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.wang.franch.helper.TimeHelper" />

        <import type="com.wang.franch.helper.StringHelper" />

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />

        <variable
            name="item"
            type="com.wang.franch.bean.DeliverRecord" />

        <variable
            name="activity"
            type="com.wang.franch.ui.ActivityDeliverRecord" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/tvIndex"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:background="@color/color_f8f8f8"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:textColor="@color/color_999"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="4月共采购：11200" />

        <ImageView
            android:id="@+id/imageCurrency"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/fr_currency_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvIndex" />

        <TextView
            android:id="@+id/textBought"
            style="@style/NormalTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/deliver"
            app:layout_constraintBottom_toTopOf="@id/imageCurrency"
            app:layout_constraintStart_toEndOf="@id/imageCurrency"
            app:layout_constraintTop_toTopOf="@id/imageCurrency" />

        <com.wang.franch.widget.MarqueeTextView
            android:id="@+id/tvTitle"
            style="@style/NormalTextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@{TimeHelper.INSTANCE.format(TimeHelper.COMMON_DATE_TIME_FORMAT,item.createTime)}"
            android:textColor="@color/color_acacac"
            app:layout_constraintBottom_toBottomOf="@id/imageCurrency"
            app:layout_constraintEnd_toStartOf="@id/tvStatus"
            app:layout_constraintStart_toStartOf="@id/textBought"
            app:layout_constraintTop_toBottomOf="@id/imageCurrency"
            tools:text="2020-04-02 19:30" />

        <TextView
            android:id="@+id/tvPrice"
            style="@style/NormalTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@{StringHelper.INSTANCE.standardAmount(context,item.totalAmount)}"
            android:textColor="@color/color_009788"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textBought"
            tools:text="1000.00" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{StringHelper.INSTANCE.deliverStatus(context,item.reviewStatus)}"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@id/tvTitle"
            app:layout_constraintEnd_toEndOf="@id/tvPrice"
            tools:text="等待审核" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textColor="@color/color_acacac"
            android:textSize="14sp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="@id/imageCurrency"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            tools:text="2020-04-12 14:30" />

        <TextView
            android:id="@+id/tvFillReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@drawable/shape_6_corner_009788_stroke"
            android:onClick="@{()->activity.viewForm(item)}"
            android:padding="4dp"
            android:text="@string/fill_receipt"
            android:textColor="@color/color_009788"
            app:layout_constraintBottom_toBottomOf="@id/tvTime"
            app:layout_constraintEnd_toStartOf="@id/tvViewReceipt"
            app:layout_constraintTop_toTopOf="@id/tvTime"
            app:layout_goneMarginEnd="0dp" />

        <TextView
            android:id="@+id/tvViewReceipt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_6_corner_009788_solid"
            android:onClick="@{()->activity.viewPdf(item)}"
            android:padding="4dp"
            android:text="@string/view_form"
            android:textColor="@color/white"
            android:visibility="@{TextUtils.isEmpty(item.customsClearanceFormPdf)?View.GONE:View.VISIBLE}"
            app:layout_constraintBottom_toBottomOf="@id/tvTime"
            app:layout_constraintEnd_toEndOf="@id/tvStatus"
            app:layout_constraintTop_toTopOf="@id/tvTime" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>